--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,6 +25,7 @@ body {
             .logo {
                 width: 100px;
                 height: 100px;
+                object-fit: cover;
                 border-radius: 50%;
             }
 
